# ITE_Project

./: CMakeLists.txt  CMakeLists.txt.bak  Kconfig  Kconfig.bak  Kconfig.win32  Kconfig_1024x600.win32  Kconfig_1280x800.win32  Kconfig_DEMO_IT9856SDK_V01_Indoor  Kconfig_DEMO_IT9856SDK_V01_Indoor_S  Untitled Project.IAD  Untitled Project.IMD  Untitled Project.PFI  Untitled Project.PO  Untitled Project.PR  Untitled Project.WK3  addressbook.c  addressbook.xml  audio.c  audio_record.c  backup.c  calllog.c  capture.c  cardlist.c  cardlist.xml  config.c  device_info.c  doorbell.h  doorbell_indoor.ini  event.c  function_table.c  guard.c  hdmi.c  house.c  house_airconditioner.c  house_curtain.c  house_light.c  house_plug.c  house_tv.c  layer_airconditioner.c  layer_audioplayer.c  (+91 more)
itu/800x480/: doorbell_indoor.itu
pack/: pack_addressbook.cmd.in  pack_cardlist.cmd.in  pack_firmware.cmd.in  pack_screensaver.cmd.in  pack_setting.cmd.in
rings/: test.xml  test.xml.bak
web/: devmode.html  info.js  setting.html
